updated html content

--- a/index.html
+++ b/index.html
@@ -12,14 +12,58 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="css/index.css">
     <title>Aaron Lim CK</title>
   </head>
   <body>
-    <section class="container">
-      <h1>Hello, world!</h1>
-    </section>
+    
+    <header>
+    </header>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <section class="container-lg">
+      <div class="vh-100 d-flex align-items-center justify-content-between">
+        <div class="animate__animated animate__fadeInLeft" style="max-width: 700px; z-index: 1;">
+          <h1><span style="font-size: 18px; font-weight: 400; padding-bottom: 8px;"> Hey there </br></span>I'm Aaron Lim</h1>
+          <p style="font-size: 18px; line-height: 28px; color: #787878">
+            A sophomore Information Systems student at <a class="external-links" href="http://smu.edu.sg" target="blank">Singapore Management
+                University</a>. I love creating and building things. In my spare time, I
+            enjoy cycling, taking photos and reading about personal growth.
+          </p>
+          <p style="font-size: 18px; line-height: 28px; color: #787878">
+            I'm always up for discussing collaboration, new opportunities, or
+            just catching up. — email me at <a class="external-links" href="mailto:hello@aaronlimchengkiat.com">hello@aaronlimchengkiat.com</a>.
+          </p>
+        </div>
+        <div class="animate__animated animate__fadeInRight profile-container">
+            <div class="d-flex justify-content-center align-items-center">
+              <img
+                class="rounded-circle"
+                style="width: 70%; height: 70%"
+                src="assets/images/profile.jpeg"
+                alt="headshot"
+              />
+          </div>
+          <div class="animate__animated animate__fadeIn animate__delay-1s" style="position: absolute; right: 0; top: 0; background-color: lightgrey; padding: 20px; border-radius: 100px">
+              <img
+                style="width: 50px; height: 50px"
+                src="assets/images/camera.png"
+                alt="camera icon"
+                />
+          </div>
+          <div class="animate__animated animate__fadeIn animate__delay-1s" style="position: absolute; left: 0; bottom: 0; background-color: lightgrey; padding: 20px; border-radius: 100px;">
+            <img
+              style="width: 50px; height: 50px"
+              src="assets/images/bike.png"
+              alt="camera icon"
+              />
+        </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
