--- a/index.html
+++ b/index.html
@@ -1,75 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link rel="stylesheet" href="css/index.css">
-    <title>Aaron Lim CK</title>
-  </head>
-  <body>
-    
-    <header>
-    </header>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="css/index.css">
+  <title>Aaron Lim CK</title>
+</head>
 
-    <section class="container-lg">
-      <div class="vh-100 d-flex align-items-center justify-content-between">
-        <div class="animate__animated animate__fadeInLeft" style="max-width: 700px; z-index: 1;">
-          <h1><span style="font-size: 18px; font-weight: 400; padding-bottom: 8px;"> Hey there </br></span>I'm Aaron Lim</h1>
-          <p style="font-size: 18px; line-height: 28px; color: #787878">
-            A sophomore Information Systems student at <a class="external-links" href="http://smu.edu.sg" target="blank">Singapore Management
-                University</a>. I love creating and building things. In my spare time, I
-            enjoy cycling, taking photos and reading about personal growth.
-          </p>
-          <p style="font-size: 18px; line-height: 28px; color: #787878">
-            I'm always up for discussing collaboration, new opportunities, or
-            just catching up. — email me at <a class="external-links" href="mailto:hello@aaronlimchengkiat.com">hello@aaronlimchengkiat.com</a>.
-          </p>
-        </div>
-        <div class="animate__animated animate__fadeInRight profile-container">
-            <div class="d-flex justify-content-center align-items-center">
-              <img
-                class="rounded-circle"
-                style="width: 70%; height: 70%"
-                src="assets/images/profile.jpeg"
-                alt="headshot"
-              />
-          </div>
-          <div class="animate__animated animate__fadeIn animate__delay-1s" style="position: absolute; right: 0; top: 0; background-color: lightgrey; padding: 20px; border-radius: 100px">
-              <img
-                style="width: 50px; height: 50px"
-                src="assets/images/camera.png"
-                alt="camera icon"
-                />
-          </div>
-          <div class="animate__animated animate__fadeIn animate__delay-1s" style="position: absolute; left: 0; bottom: 0; background-color: lightgrey; padding: 20px; border-radius: 100px;">
-            <img
-              style="width: 50px; height: 50px"
-              src="assets/images/bike.png"
-              alt="camera icon"
-              />
-        </div>
+<body>
+  <header class="animate__animated animate__fadeIn" style="position: absolute; width: 100%; height: 60px;">
+      <div class="container-lg d-flex flex-row justify-content-between align-items-center" style="height: inherit">
+        <h1 style="font-size: 16px; margin: 0px; padding: 0px">Aaron Lim CK</h1>
+        <div>
+          <a style="margin-right: 22px; text-decoration: none !important;" target="blank" href="https://www.linkedin.com/in/aaronlimchengkiat/">
+            <img style="height: 22px; width:22px" src="https://cdn-icons.flaticon.com/png/512/3536/premium/3536569.png?token=exp=1660806836~hmac=da6aca9204ddbc98091af48da7f3c8e1" alt="linkedin-icon"/>
+          </a>
+          <a style="text-decoration: none !important;" target="blank" href="https://github.com/aaronlimck">
+            <img style="height: 22px; width:22px" src="https://cdn-icons-png.flaticon.com/512/733/733609.png" alt="github-icon"/>
+          </a>
         </div>
       </div>
-    </section>
+  </header>
+  
+  <section class="container-lg">
+    <div class="vh-100 d-flex align-items-center justify-content-between">
+      <div class="animate__animated animate__fadeInLeft" style="max-width: 700px; z-index: 1;">
+        <h1>
+          <span style="font-size: 18px; font-weight: 400; padding-bottom: 8px;"> Hey there </br>
+          </span>I'm Aaron Lim
+        </h1>
+        <p style="font-size: 18px; line-height: 28px; color: #787878"> A sophomore Information Systems student at <a
+            class="external-links" href="http://smu.edu.sg" target="blank">Singapore Management University</a>. I love
+          creating and building things. In my spare time, I enjoy cycling, taking photos and reading about personal
+          growth. </p>
+        <p style="font-size: 18px; line-height: 28px; color: #787878"> I'm always up for discussing collaboration, new
+          opportunities, or just catching up. — email me at <a class="external-links"
+            href="mailto:hello@aaronlimchengkiat.com">hello@aaronlimchengkiat.com</a>. </p>
+      </div>
+      <div class="animate__animated animate__fadeInRight profile-container">
+        <div class="d-flex justify-content-center align-items-center">
+          <img class="rounded-circle" style="width: 70%; height: 70%" src="assets/images/profile.jpeg" alt="headshot" />
+        </div>
+        <div class="animate__animated animate__fadeIn animate__delay-1s"
+          style="position: absolute; right: 0; top: 0; background-color: lightgrey; padding: 20px; border-radius: 100px">
+          <img style="width: 50px; height: 50px" src="assets/images/camera.png" alt="camera icon" />
+        </div>
+        <div class="animate__animated animate__fadeIn animate__delay-1s"
+          style="position: absolute; left: 0; bottom: 0; background-color: lightgrey; padding: 20px; border-radius: 100px;">
+          <img style="width: 50px; height: 50px" src="assets/images/bike.png" alt="camera icon" />
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
