created animation icons files and updated introductions with them

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           <img class="rounded-circle" style="width: 70%; height: 70%" src="assets/images/profile.jpeg" alt="headshot" />
         </div>
         <div class="animate__animated animate__fadeIn animate__delay-1s"
-          style="position: absolute; right: 0; top: 0; background-color: lightgrey; padding: 20px; border-radius: 100px">
-          <img style="width: 50px; height: 50px" src="assets/images/camera.png" alt="camera icon" />
+          style="position: absolute; right: 0; top: 0; background-color: white; padding: 20px; border-radius: 100px; border: 1px solid #f9f9f9; box-shadow: rgb(0 0 0 / 8%) 3px 3px 40px 0px;">
+          <img style="width: 80px; height: 80px" src="assets/images/photo-camera.gif" alt="photo-camera-icon" />
         </div>
         <div class="animate__animated animate__fadeIn animate__delay-1s"
-          style="position: absolute; left: 0; bottom: 0; background-color: lightgrey; padding: 20px; border-radius: 100px;">
-          <img style="width: 50px; height: 50px" src="assets/images/bike.png" alt="camera icon" />
+          style="position: absolute; left: 0; bottom: 0; background-color: white; padding: 20px; border-radius: 100px; border: 1px solid #f9f9f9; box-shadow: rgb(0 0 0 / 8%) 3px 3px 40px 0px;">
+          <img style="width: 80px; height: 80px" src="assets/images/cycling.gif" alt="cycling-icon" />
         </div>
       </div>
     </div>
