created linkedin icon locally and update index.html to reflect the locally created icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 style="font-size: 16px; margin: 0px; padding: 0px">Aaron Lim CK</h1>
         <div>
           <a style="margin-right: 22px; text-decoration: none !important;" target="blank" href="https://www.linkedin.com/in/aaronlimchengkiat/">
-            <img style="height: 22px; width:22px" src="https://cdn-icons.flaticon.com/png/512/3536/premium/3536569.png?token=exp=1660806836~hmac=da6aca9204ddbc98091af48da7f3c8e1" alt="linkedin-icon"/>
+            <img class="socials-linkedin" style="height: 22px; width:22px" src="assets/images/linkedin-black.png" alt="linkedin-icon"/>
           </a>
           <a style="text-decoration: none !important;" target="blank" href="https://github.com/aaronlimck">
             <img style="height: 22px; width:22px" src="https://cdn-icons-png.flaticon.com/512/733/733609.png" alt="github-icon"/>
